--- a/FRONTEND/myapp/src/HomePage.css
+++ b/FRONTEND/myapp/src/HomePage.css
@@ -40,14 +40,23 @@
   position: fixed;
   top: 20px;
   right: 20px;
-  padding: 10px 20px;
+  height: 40px;
+  padding: 0px 20px;
+  font-size: 1rem;
   background: linear-gradient(145deg, rgba(0, 120, 67), rgba(139, 208, 177));
-  color: white;
+  color: #ffffff;
   border: none;
   border-radius: 25px;
   font-weight: bold;
   cursor: pointer;
   z-index: 10;
+  width: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  box-sizing: border-box;
+  text-decoration: none; 
 }
 
 .help-btn:hover {
